--- a/module_2/requirements.txt
+++ b/module_2/requirements.txt
@@ -1,1 +1,6 @@
+python >= 3.10
+beautifulsoup4>=4.12.0
+urllib
+
+# Run this to install certs on Mac:
 /Applications/Python\ 3.13/Install\ Certificates.command
