--- a/module_2/.gitattributes
+++ b/module_2/.gitattributes
@@ -1,3 +1,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 models/** filter=lfs diff=lfs merge=lfs -text
+module_2/llm_hosting/models/tinyllama* filter=lfs diff=lfs merge=lfs -text
