--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,5 +19,5 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: module_4/docs/requirements.txt
+    - requirements: module_4/requirements.txt
         
