--- a/module_4/pytest.ini
+++ b/module_4/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --cov=src --cov-report=term-missing --cov-fail-under=100
+addopts = --cov=src --cov-report=term-missing
 markers =
     web: page load / HTML structure
     buttons: button endpoints & busy-state behavior
