--- a/module_5/requirements.txt
+++ b/module_5/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-psycopg[binary]
-beautifulsoup4
+Flask>=2.0
+psycopg[binary]>=3.1
+beautifulsoup4>=4.12.0
 
 pytest
 pytest-cov
@@ -8,4 +8,6 @@ pytest-cov
 sphinx
 sphinx-rtd-theme
 
+graphviz          # required by pydeps for rendering graphs
 pylint
+pydeps
