--- a/module_6/docker-compose.yml
+++ b/module_6/docker-compose.yml
@@ -1,83 +1,86 @@
+
 services:
   db:
     image: postgres:15
     environment:
+      POSTGRES_DB: applicants
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: applicants
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/00_init.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d applicants"]
       interval: 5s
       timeout: 3s
-      retries: 10
+      retries: 20
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
   rabbitmq:
     image: rabbitmq:3-management
-    ports:
-      - "5672:5672"    # AMQP
-      - "15672:15672"  # Management UI
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
     healthcheck:
       test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
       interval: 5s
       timeout: 3s
-      retries: 10
+      retries: 20
+    ports:
+      - "5672:5672"
+      - "15672:15672"
 
   web:
     build:
       context: ./web
       dockerfile: Dockerfile
     environment:
-      FLASK_APP: run.py
-      FLASK_ENV: development
       POSTGRES_HOST: db
       POSTGRES_DB: applicants
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_PORT: "5432"
-      RABBIT_HOST: rabbitmq
-      RABBIT_PORT: "5672"
-      RABBIT_USER: guest
-      RABBIT_PASS: guest
-    ports:
-      - "8080:8080"
+      RABBITMQ_URL: "amqp://guest:guest@rabbitmq:5672/%2F"
     depends_on:
       db:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+    ports:
+      - "8080:8080"
 
   worker:
     build:
       context: ./worker
-      dockerfile: Dockerfile
     environment:
       POSTGRES_HOST: db
       POSTGRES_DB: applicants
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_PORT: "5432"
-      RABBIT_HOST: rabbitmq
-      RABBIT_PORT: "5672"
-      RABBIT_USER: guest
-      RABBIT_PASS: guest
-      # Your dataset is full_out.jsonl (not applicant_data.json) — set it explicitly:
-      DATA_FILE: /app/data/full_out.jsonl
-    volumes:
-      - ./data:/app/data:ro
-      - ./db:/app/db:ro
+      RABBITMQ_URL: "amqp://guest:guest@rabbitmq:5672/%2F"
     depends_on:
       db:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+    volumes:
+      - ./data:/app/data:ro
+      - ./db:/app/db:ro
+
+  init_loader:               # one-shot data load on startup
+    build:
+      context: ./worker      # reuse worker image (Python + deps)
+    command: ["python", "/app/db/load_data.py"]
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_DB: applicants
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_PORT: "5432"
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./data:/app/data:ro
+      - ./db:/app/db:ro
+    restart: "no"
 
 volumes:
   pgdata:
