--- a/module_6/docker-compose.yml
+++ b/module_6/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       retries: 20
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./db:/app/db:ro 
 
   rabbitmq:
     image: rabbitmq:3-management
